<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".activity.Submiission">

    <ImageView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:contentDescription="@string/no_description"
        android:scaleType="fitXY"
        android:src="@drawable/bg"
        android:transitionName="splashTranToLogin"
        tools:targetApi="lollipop" />

    <androidx.coordinatorlayout.widget.CoordinatorLayout
        android:id="@+id/appbar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        tools:context="com.dsaved.gadsleaderboard.activity.Submiission">

        <com.google.android.material.appbar.AppBarLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/transparent"
            android:elevation="0dp"
            android:theme="@style/AppTheme.AppBarOverlay"
            app:elevation="0dp">

            <androidx.appcompat.widget.Toolbar
                android:id="@+id/toolbar"
                android:layout_width="match_parent"
                android:layout_height="?attr/actionBarSize"
                android:elevation="0dp"
                app:elevation="0dp">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:elevation="0dp"
                    android:orientation="horizontal"
                    android:weightSum="10"
                    app:elevation="0dp">

                    <ImageView
                        android:id="@+id/ivLogo"
                        android:layout_width="200dp"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center"
                        android:contentDescription="@string/no_description"
                        android:scaleType="fitCenter"
                        android:src="@drawable/gadsheader" />

                </LinearLayout>
            </androidx.appcompat.widget.Toolbar>

        </com.google.android.material.appbar.AppBarLayout>


    </androidx.coordinatorlayout.widget.CoordinatorLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_below="@+id/appbar"
        android:padding="5dp"
        android:orientation="vertical">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/project_submission"
            android:textSize="20sp"
            android:layout_marginTop="10dp"
            android:textStyle="bold"
            android:textColor="#FF9800"
            android:gravity="center"
            />

        <View
            android:layout_width="300dp"
            android:layout_height="2dp"
            android:layout_gravity="center"
            android:layout_marginTop="10dp"
            android:background="@drawable/gradiant"/>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_marginStart="2dp"
            android:layout_marginEnd="2dp"
            android:layout_marginTop="60dp"
            android:weightSum="10">

            <EditText
                android:id="@+id/firstname"
                android:layout_width="0dp"
                android:paddingStart="5dp"
                android:paddingEnd="2dp"
                android:layout_marginEnd="4dp"
                android:layout_height="40dp"
                android:hint="@string/first_name"
                android:layout_weight="5"
                android:background="@drawable/textinput" />

            <EditText
                android:id="@+id/lastname"
                android:layout_width="0dp"
                android:paddingStart="5dp"
                android:paddingEnd="2dp"
                android:layout_marginStart="4dp"
                android:layout_height="40dp"
                android:hint="@string/last_name"
                android:layout_weight="5"
                android:background="@drawable/textinput" />
        </LinearLayout>

        <EditText
            android:id="@+id/email"
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:paddingStart="5dp"
            android:hint="@string/email_address"
            android:paddingEnd="2dp"
            android:layout_marginStart="2dp"
            android:layout_marginEnd="2dp"
            android:layout_marginTop="20dp"
            android:background="@drawable/textinput" />

        <EditText
            android:id="@+id/project_link"
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:paddingStart="5dp"
            android:paddingEnd="2dp"
            android:hint="@string/project_on_github_link"
            android:layout_marginStart="2dp"
            android:layout_marginEnd="2dp"
            android:layout_marginTop="20dp"
            android:background="@drawable/textinput" />

        <Button
            android:id="@+id/submit"
            android:layout_width="100dp"
            android:layout_height="30dp"
            android:layout_marginTop="60dp"
            android:layout_gravity="center"
            android:background="@drawable/submit_button"
            android:text="@string/submit"
            android:textColor="@color/header_text_color"
            android:textStyle="bold"
            />
    </LinearLayout>

</RelativeLayout>