<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".activity.MainActivity">

    <ImageView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:contentDescription="@string/no_description"
        android:scaleType="fitXY"
        android:src="@drawable/bg"
        android:transitionName="splashTranToLogin"
        tools:targetApi="lollipop" />

    <androidx.coordinatorlayout.widget.CoordinatorLayout
        android:id="@+id/appbar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        tools:context="com.dsaved.gadsleaderboard.activity.MainActivity"
       >

        <com.google.android.material.appbar.AppBarLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/transparent"
            android:elevation="0dp"
            app:elevation="0dp"
            android:theme="@style/AppTheme.AppBarOverlay">

            <androidx.appcompat.widget.Toolbar
                android:id="@+id/toolbar"
                android:layout_width="match_parent"
                android:elevation="0dp"
                app:elevation="0dp"
                android:layout_height="?attr/actionBarSize">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:elevation="0dp"
                    app:elevation="0dp"
                    android:orientation="horizontal"
                    android:weightSum="10">

                    <TextView
                        android:layout_width="0dp"
                        android:layout_height="40dp"
                        android:layout_gravity="center_vertical|start"
                        android:layout_weight="6"
                        android:gravity="center"
                        android:padding="5dp"
                        android:text="@string/leaderboard"
                        android:textAllCaps="true"
                        android:textColor="@color/header_text_color"
                        android:textSize="@dimen/header_size"
                        android:textStyle="bold" />

                    <Button
                        android:id="@+id/submit"
                        android:layout_width="0dp"
                        android:layout_height="20dp"
                        android:layout_gravity="center_vertical|end"
                        android:layout_weight="3"
                        android:background="@drawable/primary_button_curved"
                        android:clickable="true"
                        android:focusable="true"
                        android:gravity="center"
                        android:text="@string/submit"
                        android:textColor="@color/primaryText"
                        android:textStyle="bold"
                        />
                </LinearLayout>
            </androidx.appcompat.widget.Toolbar>

        </com.google.android.material.appbar.AppBarLayout>


    </androidx.coordinatorlayout.widget.CoordinatorLayout>

    <LinearLayout
        android:layout_below="@+id/appbar"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <com.dsaved.gadsleaderboard.utils.SlidingTabLayout
            android:id="@+id/tabHost"
            android:layout_width="match_parent"
            android:layout_height="48dp"
            tools:targetApi="lollipop" />

        <androidx.viewpager.widget.ViewPager
            android:id="@+id/pager"
            android:layout_width="match_parent"
            android:layout_height="match_parent" />

    </LinearLayout>

</RelativeLayout>